update: fix gap with input fields

--- a/resources/css/student.views.css
+++ b/resources/css/student.views.css
@@ -403,7 +403,7 @@ header nav ul button {
 	align-items: center;
 	justify-content: center;
 	/* border: 1px solid red; */
-	gap: 5px;
+	gap: 10px;
 }
 
 #grading-headers h3 {
@@ -429,7 +429,12 @@ header nav ul button {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	gap: 10px;
 	/* border: 1px solid red; */
+}
+
+#grading .subject-fields{
+	display: flex;
 	gap: 10px;
 }
 
